# sil-lang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: hello.sil  math.sil  variables.sil
interpreter/: interpreter.cpp  interpreter.h
lexer/: lexer.cpp  lexer.h  token.cpp  token.h
parser/: parser.cpp  parser.h
runtime/: environment.h
